fixes double border when .list-group.list-group-flush is preceded by .card-header

--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -56,6 +56,10 @@
       @include border-bottom-radius($card-border-radius);
     }
   }
+
+  .card-header + .list-group > li:first-child {
+    border: 0;
+  }
 }
 
 
